started fixing port errors/bugs